--- a/index.html
+++ b/index.html
@@ -133,15 +133,13 @@
 									<div class="posts">
 										<article>
 											<a href="#" class="image"><img src="images/11.jpg" alt="" /></a>
-											<h3>Construção de um programa de fidelidade com clusterização de clientes.</h3>
-											<p>Eu usei Python, Estatística e técnicas não-supervisionadas de Machine Learning para segmentar um grupo de clientes com base em suas características de performance de compra, a fim de selecionar grupos de clientes para formar um programa de Fidelidade com o objetivo de aumentar a receita da empresa. E o resultado dessa solução, caso fosse implementada, seria de R$ 15MM de dólares de receita anual.</p>
+											<h3>Desenvolvimento de um Painel Gerencial para Negócio com o Stremlit.</h3>
+											<p>Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimetno web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida na India.O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet.</p>
 											<ul>	
-												<li>Git, Gitlab e Github;</li>
+												<li>Git e Github;</li>
 												<li>Python, Pandas, Matplotlib e Seaborn;</li>
-												<li>Jupyter Notebook;</li>
-												<li>K-Means, Hierarquical Clustering, DBScan;</li>
-												<li>AWS Cloud ( EC2, S3, Postgres, SQLite );</li>
-												<li>Metabase Visualization.</li>
+												<li>Jupyter Notebook;</li>												
+												<li>Streamlit e Streamlit Cloud.</li>
 											</ul>
 											<ul class="actions">
 												<li><a href="#" class="button">Saiba Mais</a></li>
