--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
 											<ul>	
 												<li>Git e Github;</li>
 												<li>Python, Pandas, Matplotlib e Seaborn;</li>
+												<li>Mapas interativos com Folium e Plotly;</li>
 												<li>Jupyter Notebook;</li>												
 												<li>Streamlit e Streamlit Cloud.</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="https://currycompanyhome.streamlit.app/" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 										<article>
