--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 									
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/11.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/readme2.png" alt="" /></a>
 											<h3>Desenvolvimento de um Painel Gerencial para Negócio com o Stremlit.</h3>
 											<p>Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimetno web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida na India.O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet.</p>
 											<ul>	
@@ -143,7 +143,7 @@
 												<li>Streamlit e Streamlit Cloud.</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://currycompanyhome.streamlit.app/" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/michelwop/curry_company" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 										<article>
